# Atlas-chat

./: .coverage  .gitignore  .mcp.json  AGENT.md  CHAT.md  CLAUDE_dev.md  README.md  ROADMAP.md  SCAFFOLD_GUIDE.md  pyproject.toml
.claude/agents/: citation-traverse.md  resolve-name.md  scan-supplements.md  synthesize-report.md
.claude/commands/: chat.md  run-workflow.md
.claude/hooks/: check_report_refs.py
.claude/skill/citation-traverse/: SKILL.md
.claude/skill/generate-report/: SKILL.md
.claude/skills/: load-project-context.md
.githooks/: pre-commit
.github/workflows/: test.yml
docs/: conf.py
experiments/: README.md
planning/: plan_loosen_prompts_2026-03-17.md  postmortem_Inf_mono_2026-03-17.md
projects/fetal_skin_atlas/: atlas_cell_types_broad.csv  atlas_cell_types_fine.csv  cell_type_annotations.json
projects/fetal_skin_atlas/reports/: C_Melanocyte.md  DC1.md  DC2.md  F1.md  F2.md  Inf_mono_backup.md  Iron-recycling_macrophage_backup.md
scratch/: check_gene_ids.py  iron_recycling_macrophages_report.md
scripts/: e2e_smoke.py  generate_report.py  graduate-ring.py
src/atlas_chat/: README.md  pyproject.toml
src/atlas_chat/agents/: example_agent.py  (+3 more)
src/atlas_chat_validation_tools/: README.md  pyproject.toml
src/atlas_chat_validation_tools/atlas_chat_validation_tools/: __init__.py
src/atlas_chat_validation_tools/atlas_chat_validation_tools/comparisons/: README.md
src/atlas_chat_validation_tools/atlas_chat_validation_tools/metrics/: README.md
src/atlas_chat_validation_tools/atlas_chat_validation_tools/visualizations/: README.md
(+52 files in other folders)
