[project]
name = "atlas_chat_validation_tools"
version = "0.1.0"
description = "Validation and analysis tools for atlas_chat"
readme = "README.md"
requires-python = ">= 3.13"
dependencies = [
    "atlas_chat",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
